# gpui-video

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: looping.rs  video_player.rs  with_controls.rs
src/: element.rs  error.rs  lib.rs  video.rs
