[package]
name = "gpui-video"
version = "0.1.2"
edition = "2024"
exclude = ["assets"]
authors = ["nemurubaka <cijiugechu@gmail.com>"]
description = "A video player library for gpui applications, built on top of GStreamer."
homepage = "https://github.com/cijiugechu/gpui-video"
repository = "https://github.com/cijiugechu/gpui-video"
license = "MIT"
readme = "README.md"
keywords = ["gpui", "video", "player", "gstreamer"]
categories = ["multimedia"]
documentation = "https://docs.rs/gpui-video"

[dependencies]
gpui = "0.2"
ffmpeg-next = "8.0.0"
crossbeam-channel = "0.5"
log = "0.4"
thiserror = "2"
url = "2" # media uri
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp"] }
smallvec = "1"
yuv = "0.8"
cpal = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-video = "0.4"
core-foundation = "0.10"

[dev-dependencies]
env_logger = "0.11"
gpui-component = "0.2"
